[package]
name = "pomp"
version = "0.1.0"
edition = "2024"
description = "Data CLI tool inspired by Boop"
homepage = "https://github.com/albert-yu/pomp"
repository = "https://github.com/albert-yu/pomp"


[dependencies]
ratatui = "0.29.0"
color-eyre = "0.6"
crossterm = "0.29.0"
ropey = "1.6.1"
arboard = "3.4"
base64 = "0.22"
serde_json = "1.0"
lightningcss = "1.0.0-alpha.68"
sha2 = "0.10"
cuid = "1.3"
uuid = { version = "1.11", features = ["v4"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
